# Указание на минимальную версию CMake
cmake_minimum_required(VERSION 3.27)
# Общие сведения о проекте
project(
    pz1                                                 # Название проекта
    VERSION 0.0.0                                       # Номер версии проекта
    DESCRIPTION "Calculate Fibonacchi"                  # Описание проекта
    LANGUAGES CXX                                       # Язык программирования
)
# Указываю версию C++, которую буду использовать. Здесь 17 версия
set(CMAKE_CXX_STANDARD 17)
# Указываю, что хочу вести проверку этого стандарта
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Указываю сборке, что код надо компилировать в исполняемый файл с наименованием pz1.exe
add_executable(pz1)
# Указываю сборке, что код надо компилировать в статическую библиотеку с наименованием pz1.lib
# add_library(pz1)
# Указываю сборке, что код надо компилировать в дитнамическую библиотеку с наименованием pz1.dll
# add_library(pz1 SHARED)

# Создаю CMake-переменную source, которая содержит список файлов исходного кода (в данном случае main.cpp)
set(sources
    main.cpp
)

# Указываю компилятору, что исполняемый файл будет компилироваться из исходников, перечисленных в моей созданной CMake-переменной sources
target_sources(pz1 PRIVATE ${sources})